add project name to source-monitor queries